--- a/_posts/2022-06-22-bananas.md
+++ b/_posts/2022-06-22-bananas.md
@@ -4,7 +4,7 @@ date: 2022-06-22 00:00:00 Z
 author: John
 ---
 
-A banana is an edible fruit – botanically a berry – produced by several kinds
+A banana is an edible fruit – botanically & biologically a berry – produced by several kinds
 of large herbaceous flowering plants in the genus Musayy.
 
 In some countries and continents, bananas used for cooking may be called "plantains",
